FreeST/test/Programs/ValidTests/Modules/DiamondR/DiamondR.fst
module DiamondR where 

import A 
import B 

main : Int 
main = a + b 
