FreeST/test/Programs/InvalidTests/Modules/ImportedMissingHeader/ImportedMissingHeader.fst
module ImportedMissingHeader where

import NoHeader

main : Int
main = double 2
